# cpp_binder

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  compile.sh  dub.json  main.cpp
config/: builtin_types.json  cpp_binder.json  cpp_binder.opts  llvm.json  llvm.opts  qt.json  stl.json
doc/: design.md
source/: DOutput.cpp  DOutput.hpp  WrappedType.cpp  WrappedType.hpp  binder.d  clang_ast_visitor.cpp  clang_ast_visitor.hpp  clang_wrapper.cpp  clang_wrapper.hpp  cli.cpp  cli.d  cli.hpp  configuration.cpp  configuration.d  configuration.hpp  cpp_decl.cpp  cpp_decl.hpp  cpp_exception.hpp  cpp_expr.cpp  cpp_expr.hpp  cpp_type.cpp  cpp_type.hpp  dlang_decls.cpp  dlang_decls.d  dlang_decls.hpp  dlang_output.cpp  dlang_output.d  dlang_output.hpp  log_controls.d  main.cpp  main.d  manual_types.d  nested_name_resolver.hpp  string.cpp  string.hpp  translate.cpp  translate.d  unknown.d
source/dast/: common.d  decls.d  expr.d  package.d  type.d
source/translate/: decls.d  expr.d  types.d
tests/: compile.sh  dub.json  func_return_int.cpp  interface.hpp  simple_struct.hpp  test.json  test_runner.d
tests/anonymous_union/input/: anonymous_union.hpp
tests/anonymous_union/output/: unknown.d
tests/auto/input/: auto.hpp
tests/auto/output/: unknown.d
tests/class_variable/input/: class_variable.hpp
tests/class_variable/output/: unknown.d
tests/const_method/input/: const_method.hpp
tests/const_method/output/: unknown.d
tests/const_unconst/input/: const_unconst.hpp
tests/const_unconst/output/: unknown.d
tests/const_var/input/: const_var.hpp
tests/const_var/output/: unknown.d
tests/dependent_types/input/: dependent_type.hpp
tests/dependent_types/output/: unknown.d
tests/dependent_types_2/input/: dependent_type.hpp
tests/dependent_types_2/output/: unknown.d
tests/dependent_types_3/input/: dependent_type.hpp
tests/dependent_types_3/output/: unknown.d
tests/double_pointer/input/: double_pointer.hpp
tests/double_pointer/output/: unknown.d
tests/enum_named/input/: enum_named.hpp
tests/enum_named/output/: unknown.d
tests/forward/input/: forward.hpp
tests/forward/output/: unknown.d
tests/forward_external/: test.json
tests/forward_external/input/: forward.hpp
tests/forward_external/output/: unknown.d
tests/forward_template/input/: forward_template.hpp
tests/forward_template/output/: unknown.d
tests/func_ptr/input/: func_ptr.hpp
tests/func_ptr/output/: unknown.d
tests/func_return_int/output/: unknown.d
tests/func_return_struct/input/: func_return_struct.hpp
tests/func_return_struct/output/: unknown.d
tests/interface/input/: interface.hpp
tests/interface/output/: unknown.d
tests/interface_usage/input/: interface_usage.hpp
tests/interface_usage/output/: unknown.d
tests/interface_visibility/input/: interface_visibility.hpp
tests/interface_visibility/output/: unknown.d
tests/linkage/input/: linkage.hpp
tests/linkage/output/: unknown.d
tests/namespaces/input/: namespaces.hpp
tests/namespaces/output/: unknown.d
tests/pointer_const/input/: pointer_const.hpp
tests/pointer_const/output/: unknown.d
tests/simple_struct/output/: unknown.d
tests/size_t/input/: size_t.hpp
tests/size_t/output/: unknown.d
tests/struct_inheritance/input/: struct_inheritance.hpp
tests/struct_inheritance/output/: unknown.d
tests/struct_visibility/input/: struct_visibility.hpp
tests/struct_visibility/output/: unknown.d
tests/template_1/input/: template_1.hpp
tests/template_1/output/: unknown.d
tests/template_2/input/: template_2.hpp
tests/template_2/output/: unknown.d
tests/template_default_nontype_args/input/: template_default_nontype_args.hpp
tests/template_default_nontype_args/output/: unknown.d
tests/template_default_nontype_args_2/input/: template_default_nontype_args.hpp
tests/template_default_nontype_args_2/output/: unknown.d
tests/template_default_type_args/input/: template_default_type_args.hpp
tests/template_default_type_args/output/: unknown.d
tests/template_func_ptr/input/: template_func_ptr.hpp
tests/template_func_ptr/output/: unknown.d
tests/template_instantiate_1/input/: template_instantiate_1.hpp
tests/template_instantiate_1/output/: unknown.d
tests/template_instantiate_2/input/: template_instantiate_2.hpp
tests/template_instantiate_2/output/: unknown.d
tests/template_instantiate_3/input/: template_instantiate_3.hpp
tests/template_instantiate_3/output/: unknown.d
tests/template_interface/input/: template_interface.hpp
tests/template_interface/output/: unknown.d
tests/template_specialization/input/: template_specialization.hpp
tests/template_specialization/output/: unknown.d
tests/template_union/input/: template_union.hpp
tests/template_union/output/: unknown.d
tests/typedef_int/input/: typedef_int.hpp
tests/typedef_int/output/: unknown.d
tests/union/input/: union.hpp
tests/union/output/: unknown.d
