cmake_minimum_required(VERSION 2.8)

add_definitions(-D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS)
find_library(CLANG_LIBRARY_PATH clang)
find_library(CLANG_ANALYSIS_LIBRARY_PATH clangAnalysis)
find_library(CLANG_AST_LIBRARY_PATH clangAST)
find_library(CLANG_BASIC_LIBRARY_PATH clangBasic)
find_library(CLANG_DRIVER_LIBRARY_PATH clangDriver)
find_library(CLANG_EDIT_LIBRARY_PATH clangEdit)
find_library(CLANG_FRONTEND_LIBRARY_PATH clangFrontend)
find_library(CLANG_LEX_LIBRARY_PATH clangLex)
find_library(CLANG_PARSE_LIBRARY_PATH clangParse)
find_library(CLANG_TOOLING_LIBRARY_PATH clangTooling)
find_library(CLANG_SEMA_LIBRARY_PATH clangSema)
find_library(CLANG_SERIALIZATION_LIBRARY_PATH clangSerialization)
find_library(LLVM_LIBRARY_PATH LLVM-3.4)
find_library(LLVM_SUPPORT_LIBRARY_PATH LLVMSupport)
find_library(PTHREADS_LIBRARY_PATH pthread)
find_library(DL_LIBRARY_PATH dl)
find_library(NCURSES_LIBRARY_PATH ncursesw)

add_compile_options(-std=c++11 -Wall -Wextra -pedantic)
add_executable(cpp_binder source/main.cpp source/cpp_type.cpp source/DOutput.cpp source/cli.cpp source/cpp_decl.cpp)

target_link_libraries(cpp_binder ${CLANG_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_TOOLING_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_FRONTEND_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_DRIVER_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_PARSE_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_SEMA_LIBRARY_PATH} ${CLANG_SERIALIZATION_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_ANALYSIS_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_EDIT_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_AST_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_LEX_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${CLANG_BASIC_LIBRARY_PATH} )
target_link_libraries(cpp_binder ${LLVM_LIBRARY_PATH} ${LLVM_SUPPORT_LIBRARY_PATH})
target_link_libraries(cpp_binder ${PTHREADS_LIBRARY_PATH} ${DL_LIBRARY_PATH})
target_link_libraries(cpp_binder ${NCURSES_LIBRARY_PATH})
