cmake_minimum_required(VERSION 2.8)

add_definitions(-D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS)
find_library(CLANG_LIBRARY_PATH clang /usr/lib/llvm-3.8/lib/)
find_library(CLANG_ANALYSIS_LIBRARY_PATH clangAnalysis /usr/lib/llvm-3.8/lib/)
find_library(CLANG_AST_LIBRARY_PATH clangAST /usr/lib/llvm-3.8/lib/)
find_library(CLANG_BASIC_LIBRARY_PATH clangBasic /usr/lib/llvm-3.8/lib/)
find_library(CLANG_DRIVER_LIBRARY_PATH clangDriver /usr/lib/llvm-3.8/lib/)
find_library(CLANG_EDIT_LIBRARY_PATH clangEdit /usr/lib/llvm-3.8/lib/)
find_library(CLANG_FRONTEND_LIBRARY_PATH clangFrontend /usr/lib/llvm-3.8/lib/)
find_library(CLANG_LEX_LIBRARY_PATH clangLex /usr/lib/llvm-3.8/lib/)
find_library(CLANG_PARSE_LIBRARY_PATH clangParse /usr/lib/llvm-3.8/lib/)
find_library(CLANG_TOOLING_LIBRARY_PATH clangTooling /usr/lib/llvm-3.8/lib/)
find_library(CLANG_SEMA_LIBRARY_PATH clangSema /usr/lib/llvm-3.8/lib/)
find_library(CLANG_SERIALIZATION_LIBRARY_PATH clangSerialization /usr/lib/llvm-3.8/lib/)
find_library(LLVM_LIBRARY_PATH LLVM-3.8 /usr/lib/llvm-3.8/lib/)
find_library(LLVM_SUPPORT_LIBRARY_PATH LLVMSupport /usr/lib/llvm-3.8/lib/)
find_library(PTHREADS_LIBRARY_PATH pthread)
find_library(DL_LIBRARY_PATH dl)
find_library(NCURSES_LIBRARY_PATH ncursesw)
find_library(BOOST_FILESYSTEM_LIBRARY_PATH boost_filesystem)
find_library(BOOST_SYSTEM_LIBRARY_PATH boost_system)

if(EXISTS /usr/lib/llvm-3.8/include)
        include_directories(SYSTEM /usr/lib/llvm-3.8/include)
endif(EXISTS /usr/lib/llvm-3.8/include)

add_compile_options(-std=c++11 -Wall -Wextra -pedantic)
add_library(cpp_binder source/configuration.cpp source/cpp_type.cpp source/cpp_decl.cpp source/cpp_expr.cpp source/string.cpp source/clang_wrapper.cpp)
